<resources>
    <string name="app_name">CallerU</string>
    <string name="appDescr">Now update your contact number within 10 sec \n and \nlet your new number know to all the user who is using this App and available in your phonebook directory</string>

    <!-- Place the OneSignal Api key and Auth key -->
    <string name="oneSignalApiKey">NTI0MWI4ODctNTc3NS00ZWM2LTljZmItM2NjYWE5OGI3MTA1</string>
    <string name="oneSignalAppId">f8f84cee-8ede-4e08-aa37-56b12d6ba832</string>

    <!-- Login Page String -->
    <string name="enterNumber">Enter Your Mobile Number</string>
    <string name="numberHint">enter number here</string>
    <string name="enterCode">Enter The Received Code</string>
    <string name="codeHint">6 digit code</string>
    <string name="enterName">Enter Your Name</string>
    <string name="nameHint">First and Last Name</string>
    <string name="sendCode">Send Code</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <!-- Home Page String -->
    <string name="navigationDrawerOpen">Open navigation drawer</string>
    <string name="navigationDrawerClose">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="signOut">Log out</string>
    <string name="exit">Exit</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="dial">Dial</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="notification">Notification</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>

    <!-- Update page and Screen String -->
    <string name="updateNow">Update Now</string>
    <string name="newNumber">Enter your new number</string>
    <string name="notificationToShow"> people are using this app in your contacts list</string>
    <string name="updateYourNumberTo">Update Your Contact Number To %s</string>

    <!-- Search Screen -->
    <string name="searchHint">Search here by name</string>
    <string name="enterSearchText">Enter text to search</string>

    <string name="wait">Wait, while new notification fetching …</string>
    <string name="recentChanges">Recent Changes</string>

    <!-- Error String -->
    <string name="enterValidNumber">Please, Enter valid number !!!</string>
    <string name="enterValidCode">Please, Enter valid code !!!</string>
    <string name="allFieldReq">All field required to continue !!!</string>
    <string name="networkError">Please, Check your internet connection !!!</string>
    <string name="noNewNotification">No New Notification To Show</string>
    <string name="noContactsFound">No Contacts Found By This Name</string>
    <string name="permissionErr">Please, Provide All permission</string>

    <!--    Dial Pad -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="doubleZero">00</string>

    <!-- Content Description -->
    <string name="phoneImage">Phone Image</string>
    <string name="callTypeImage">Call Type</string>
    <string name="undo">undo</string>
    <string name="changeTo">Change To</string>
</resources>
